--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Mon Mar 12 12:55:22 WIT 2012
+#Tue Apr 03 01:12:46 ICT 2012
 app.grails.version=2.0.1
 app.name=cygnus-transactionmanager
 app.servlet.version=2.5
